4^ART/K/Informatica/Java/non funzionano/Calcolatrice (inizio 30.10.17)/calcolatrice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\BlueJ-windows-410\bluej\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\BlueJ-windows-410\bluej\lib\bluejcore.jar;C:\BlueJ-windows-410\bluej\lib\junit-4.11.jar;C:\BlueJ-windows-410\bluej\lib\hamcrest-core-1.3.jar;C:\BlueJ-windows-410\bluej\lib\lang-stride.jar;C:\BlueJ-windows-410\bluej\lib\userlib\pi4j-core.jar;C:\BlueJ-windows-410\bluej\lib\userlib\pi4j-device.jar;C:\BlueJ-windows-410\bluej\lib\userlib\pi4j-gpio-extension.jar;C:\BlueJ-windows-410\bluej\lib\userlib\pi4j-service.jar;K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice
-d
K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice\doc
-encoding
UTF-8
-charset
UTF-8
K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice\somma.java
<---- end of javadoc command ---->
Loading source file K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice\somma.java...
K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice\somma.java:1: error: class, interface, or enum expected
public int Op()
       ^
K:\Informatica\Java\Calcolatrice (inizio 30.10.17)\calcolatrice\somma.java:4: error: class, interface, or enum expected
    }
    ^
2 errors
